# HidrateSpark-MQTT-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  hidrate_ble.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: __init__.py  __main__.py  ble.py  config.py  mqtt.py  state.py  web.py
app/templates/: base.html  dashboard.html  settings_bottle.html  settings_mqtt.html
config/: config.example.yaml
docs/: SYNC_AND_PROTOCOL.md
templates/: index.html
